button spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3988,7 +3988,6 @@ body {
 }
 
 .col-lg-4.col-md-6.col-sm-6 {
-	width: unset;
 	padding: unset;
 }
 :root {
